# finSys

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  backtest_all.bat  policy.txt  pyproject.toml  pytest.ini  requirements.txt
.specify/: feature.json
config/: csi500.yaml  csi500_5min.yaml  csi500_scoring.yaml  default.yaml.example  selection_breakout.yaml  selection_breakout_test.yaml  selection_factor_based.yaml  selection_test.yaml  zz500_rl_single_stock.yaml
docs/: FAQ.md  breakout-strategy-guide.md  breakout-strategy-implementation-summary.md  breakout-strategy-quickstart.md  breakout-strategy-score-normalization.md  data-pipeline.md  dynamic-backtest-example.md  dynamic-backtest-guide.md  dynamic-backtest-summary.md  fusion-guide.md  market-state-classification.md  multi-epoch-training.md  scoring-mode-implementation-summary.md  scoring-mode-quickstart.md  selection-training-guide.md  selection-training-quickstart.md  selection-verbose-output.md  sentiment-guide.md  training-guide.md  user-guide.md  zz500-rl-final-report.md  zz500-rl-implementation-summary.md  zz500-rl-quickstart.md  zz500-rl-usage.md
examples/: breakout_strategy_example.py
finquant/: __init__.py
kline-vit/: .gitignore  README.md  pytest.ini  requirements.txt  setup.py
scripts/: backtest_zz500_single_stock.py  check_daily_data.py  check_db.py  demo_breakout_complete.py  demo_selection_integration.py  demo_verbose_selection.py  diagnose_breakout.py  diagnose_breakout_fixed.py  download_zz500_data.py  migrate_db_ticker_format.py  random_rl_train.py  selection_rl_train.py  (+5 more)
(+884 files in other folders)
