[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finsys"
version = "0.1.0"
description = "A-share quantitative trading research pipeline with FinRL and Qwen"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "finSys Team" }]
dependencies = [
  "finrl>=0.3.7",
  "stable-baselines3>=2.0.0",
  "gymnasium>=0.29.0",
  "stockstats>=0.5.4",
  "akshare>=1.18.0",
  "baostock>=0.8.9",
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "pyarrow>=14.0.0",
  "torch>=2.1.0",
  "transformers>=4.40.0",
  "bitsandbytes>=0.41.0",
  "click>=8.1.0",
  "pyyaml>=6.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "matplotlib>=3.8.0",
  "pyecharts>=2.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "pytest-mock>=3.12.0"
]

[project.scripts]
finsys = "finquant.cli.main:cli"

[tool.setuptools.packages.find]
include = ["finquant*"]

[tool.coverage.run]
omit = ["finquant/cli/main.py"]
